--- a/_faq/2019-01-01-0000004.md
+++ b/_faq/2019-01-01-0000004.md
@@ -3,8 +3,7 @@ layout: single
 title: pak mau tanya, pak saatini kan kalau SKD pakai djp online saya waktu buka djp online tidak ada menu SKD
 avatar-q: butterfly
 avatar-a: monkey
-tags: 
-- KUP
+tags: KUP
 ---
 Silakan masuk ke djponline.pajak.go.id
 
