--- a/_faq/2019-01-01-0000003.md
+++ b/_faq/2019-01-01-0000003.md
@@ -1,17 +1,46 @@
 ---
 layout: single
-title: pak mau tanya, pak saatini kan kalau SKD pakai djp online saya waktu buka djp online tidak ada menu SKD
+title: kalo windows 10 trus coba cara diatas berhasil ga ya pak? saya mau coba makam ini si
 avatar-q: butterfly
 avatar-a: monkey
 tags: KUP
 ---
-Silakan masuk ke djponline.pajak.go.id
+Solusi:
+Tutup eSPTnya kemudian
+a. Klik Start, lalu ketik CMD
+b. Klik kanan CMD, pilih Run As Administrator, setelah itu ketik baris berikut:
+c. Jika Windows 32 bit, maka ketik:
+regsvr32   “c:\regdll\cNewMenu6.dll“
+lalu tekan tombol Enter, lalu ketik lagi
+regsvr32   “c:\regdll\SSubTmr6.dll”
+lalu tekan tombol Enter
+d. Jika Windows 64 bit, maka ketik:
+%windir%\syswow64\regsvr32   “c:\regdll\cNewMenu6.dll”
+lalu tekan tombol Enter, lalu ketik lagi
+%windir%\syswow64\regsvr32   “c:\regdll\SSubTmr6.dll”
+lalu tekan tombol Entere.
+e. Pastikan setelah melakukan langkah c atau d, keluar pesan sukses
+Error “Operation was canceled…” saat memilih database espt pasal 23
+WP saat menjalakan espt kemudian meng-klik 2 kali pada nama DSN, muncul pesan error:
+Operation was canceled. PROVIDER=MSDASQL;dsn=Excel Files;uid=;pwd=…
+Solusi:
+Pastikan nama Data Source Nama (DNS) sudah benar-benar terpilih baru kemudian klik tombol OK
+Error saat klik tombol “buat” SPT, muncul pesan berturut-turut sebagai beriku:
+429: Class_Initialize Sub: ActiveX component can’t create object
+91: Class_Initialize Sub: Object variable or With block variable not set
+Item cannot be found in the collection corresponding to the requested name or ordinal
 
-Pilih menu "Profil Lengkap"
-Scroll ke bawah di menu tambah/kurang hak akses
-Centang "e-SKD"
-Pilih "ubah akses"
+Operation is not allowed when the object is closed
 
-Login kembali, dan voila, menunya muncul
 
-Permisi suhu, ada yang pernah mengalami error saat pembuatan spt di espt pph 23 dengan keterangan “Object variable or With block variable not set”? Error nya berlanjut sampai dengan pembuatan bukti potong pph 23 nya. Boleh berbagi pengalamannya kalo ada yang pernah solving masalah tersebut 🙏🏾
+Solusi:
+Tutup eSPTnya kemudian
+a. Klik Start, lalu ketik CMD
+b. Klik kanan CMD, pilih Run As Administrator, setelah itu ketik baris berikut:
+c. Jika Windows 32 bit, maka ketik:
+regsvr32   “c:\regdll\SPTmgrPPhMasa23.dll”
+lalu tekan tombol Enter
+d. Jika Windows 64 bit, maka ketik:
+%windir%\syswow64\regsvr32   “c:\regdll\SPTmgrPPhMasa23.dll”
+lalu tekan tombol Enter
+e. Pastikan setelah melakukan langkah c atau d, keluar pesan sukses
